Unregister RTCPeerConnectionHandler upon native PC's Close()

The existing code only unregisters the handler it is destructed. 
However, garbage collection might not destroy the object for a while.

Bug: 780855
Change-Id: I68d2c1b49cc5042d53464878977400bfd3b75c81
Reviewed-on: https://chromium-review.googlesource.com/754838
Commit-Queue: Elad Alon <eladalon@chromium.org>
Reviewed-by: Henrik Boström <hbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514466}
Former-commit-id: d138e38ab67e6badaacbd041dcdd67eeeaadd735